feat: tome bundle jetbrains--youtrackdb